<resources>
    <string name="app_name">TarefasEscolar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="descricao">Nome</string>
    <string name="uid">Uid</string>
    <string name="email">Email</string>
    <string name="sign_out">Sign out</string>
    <string name="imagem_do_usuario">Imagem do usuário</string>
    <string name="welcome">Bem-vindo ao gerenciador de tarefas!</string>
    <string name="fa_a_o_login_com_o_google_para_comecar">Faça o login com o Google para começar...</string>
    <string name="criar_minha_turma">Criar minha turma</string>
    <string name="vou_entrar_em_uma">Vou entrar em uma...</string>
    <string name="cole_o_id_da_turma_aqui">Cole o ID da turma aqui...</string>
    <string name="ir">ir</string>
    <string name="configuracoes">Configurações</string>
    <string name="ajuda">Ajuda</string>
    <string name="meu_perfil">Meu perfil</string>
    <string name="numero">Número</string>
    <string name="sua_turma_tem_um_nome">Sua turma tem um descricao?</string>
    <string name="sua_turma_tem_um_numero">Sua turma tem um número?</string>
    <string name="partiu_criar_sua_turma">Partiu criar sua turma?</string>
    <string name="lembre_se_que_quando_voc_cria_sua_turma_voc_se_torna_o_administrador_dela_ent_o_se_liga_nessa_responsabilidade_antes">Lembre-se que quando você cria sua turma, você se torna o administrador dela. Então se liga nessa responsabilidade antes...</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="concordo_com_os_termos_de_uso">Concordo com os Termos de Uso</string>
    <string name="termos_de_uso">Termos de Uso</string>
    <string name="sobre">Sobre</string>
    <string name="title_activity_home_class">HomeClassActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
